--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="stop">Stop■</string>
     <string name="prev">＜前へ</string>
     <string name="next">次へ＞</string>
+    <string name="autoPlay">連続再生</string>
 </resources>
